# Contract-agent-py

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 0001_create_business_tables.py
app/: __init__.py  main.py
app/ai/: __init__.py  langchain_factory.py
app/ai/chains/: __init__.py  approval_assist.py  qa.py  risk_check.py
app/ai/graphs/: __init__.py  approval_assist_graph.py  contract_qa_graph.py  risk_check_graph.py  state.py
app/ai/rag/: __init__.py  document_mapping.py  ingestion.py  retrievers.py  vector_store.py
app/api/: errors.py
app/api/routes/: contracts.py  health.py  policies.py
app/core/: config.py  exceptions.py
app/db/: models.py  session.py
app/domain/: enums.py  models.py
app/repositories/: contracts.py  policies.py
app/schemas/: base.py  contracts.py  policies.py
app/services/: contract_application.py  contract_approval_assist.py  contract_qa.py  contract_risk_check.py  policy_application.py
docs/: CODE_COMMENT_GUIDELINES.md  PROJECT_REQUIREMENTS.md
tests/: conftest.py  test_health.py  test_import_apis.py
